Added estimation controller + other improvements
