# backend/service-core/src/main/java/com/primesloth/budgetcontrolapp/controllers/ResourceController.java
@@ -1,5 +1,6 @@
 package com.primesloth.budgetcontrolapp.controllers;
 
+import com.primesloth.budgetcontrolapp.api.model.AssociateResourceToProjectByOrganizationNameAndClientId200Response;
 import com.primesloth.budgetcontrolapp.api.model.Resource;
 import com.primesloth.budgetcontrolapp.api.rest.ResourcesApi;
 import com.primesloth.budgetcontrolapp.services.ResourceService;
@@ -23,5 +24,15 @@ public class ResourceController implements ResourcesApi {
     @Override
     public ResponseEntity<Resource> createResourceByOrganizationName(String name, Resource resource) {
         return resourceService.createResourceByOrganizationName(name, resource);
+    }
+
+    @Override
+    public ResponseEntity<AssociateResourceToProjectByOrganizationNameAndClientId200Response> associateResourceToProjectByOrganizationNameAndClientId(String name, Integer clientId, Integer projectId, Resource resource) {
+        return resourceService.associateResourceToProjectByOrganizationNameAndClientId(name, clientId, projectId, resource);
+    }
+
+    @Override
+    public ResponseEntity<List<Resource>> getAllResourceByClientIdAndProjectId(String name, Integer clientId, Integer projectId) {
+        return resourceService.getAllResourceByClientIdAndProjectId(name, clientId, projectId);
     }
 }
