# backend/service-core/src/main/java/com/primesloth/budgetcontrolapp/services/ResourceService.java
@@ -1,9 +1,14 @@
 package com.primesloth.budgetcontrolapp.services;
 
+import com.primesloth.budgetcontrolapp.api.model.AssociateResourceToProjectByOrganizationNameAndClientId200Response;
 import com.primesloth.budgetcontrolapp.api.model.Resource;
+import com.primesloth.budgetcontrolapp.entities.ResourceProjectEntity;
 import com.primesloth.budgetcontrolapp.mappers.OrganizationMapper;
+import com.primesloth.budgetcontrolapp.mappers.ProjectMapper;
 import com.primesloth.budgetcontrolapp.mappers.ResourceMapper;
 import com.primesloth.budgetcontrolapp.repositories.OrganizationRepository;
+import com.primesloth.budgetcontrolapp.repositories.ProjectRepository;
+import com.primesloth.budgetcontrolapp.repositories.ResourceProjectRepository;
 import com.primesloth.budgetcontrolapp.repositories.ResourceRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -22,11 +27,11 @@ public class ResourceService {
     private final OrganizationRepository organizationRepository;
     private final ResourceMapper resourceMapper;
     private final ResourceRepository resourceRepository;
+    private final ResourceProjectRepository resourceProjectRepository;
+    private final ProjectRepository projectRepository;
+    private final ProjectMapper projectMapper;
     @Transactional
     public ResponseEntity<Resource> createResourceByOrganizationName(String name, Resource resource) {
-        if(Objects.isNull(name)){
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing organization name parameter.");
-        }
 
         var orgOptional = organizationRepository.findByName(name);
         if(orgOptional.isEmpty()){
@@ -40,9 +45,6 @@ public class ResourceService {
     }
 
     public ResponseEntity<List<Resource>> getAllResourcesByOrganizationName(String name) {
-        if(Objects.isNull(name)){
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing organization name parameter.");
-        }
 
         var orgOptional = organizationRepository.findByName(name);
         if(orgOptional.isEmpty()){
@@ -51,5 +53,34 @@ public class ResourceService {
 
         var resources = resourceRepository.findAllByOrganizationName(name);
         return ResponseEntity.ok(resourceMapper.toResourceListDto(resources));
+    }
+
+    @Transactional
+    public ResponseEntity<AssociateResourceToProjectByOrganizationNameAndClientId200Response> associateResourceToProjectByOrganizationNameAndClientId(String name, Integer clientId, Integer projectId, Resource resource) {
+        var resourceEntityOptional = resourceRepository.findById(resource.getId().longValue());
+        if(resourceEntityOptional.isEmpty()){
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid resource id");
+        }
+        var projectEntityOptional = projectRepository.findById(projectId.longValue());
+        if(projectEntityOptional.isEmpty()){
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid project id");
+        }
+        var rpEntityOptional = resourceProjectRepository.findByResourceIdAndProjectId(resource.getId().longValue(), projectId.longValue());
+        if(rpEntityOptional.isEmpty()){
+            var rpEntity = new ResourceProjectEntity();
+            rpEntity.setProjectEntity(projectEntityOptional.get());
+            rpEntity.setResourceEntity(resourceEntityOptional.get());
+            resourceProjectRepository.save(rpEntity);
+        }
+
+        var arp = new AssociateResourceToProjectByOrganizationNameAndClientId200Response();
+        arp.setResource(resourceMapper.toResourceDto(resourceEntityOptional.get()));
+        arp.setProject(projectMapper.toProjectDto(projectEntityOptional.get()));
+        return ResponseEntity.ok(arp);
+    }
+
+    public ResponseEntity<List<Resource>> getAllResourceByClientIdAndProjectId(String name, Integer clientId, Integer projectId) {
+        var resourceEntities = resourceRepository.findAllByOrganizationNameAndClientIdAndProjectEntityId(name, clientId.longValue(), projectId.longValue());
+        return ResponseEntity.ok(resourceMapper.toResourceListDto(resourceEntities));
     }
 }
